# ImgAE-Dx

./: .gitignore  ARCHITECTURE.md  Anomaly_Detection_Research.ipynb  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT_TODO.md  GEMINI.md  IDEA.md  PROGRESS_SUMMARY.md  PROJECT_COMPLETION.md  PROJECT_JOURNEY.md  QUESTION.md  QUICK_START.md  README.md  SECURITY.md  STREAMING_ARCHITECTURE.md  STREAMING_ARCHITECTURE_UPDATED.md  Structure.md  pyproject.toml
configs/: .gitignore  kaggle.json  kaggle.json.template  project_config.yaml  t4_gpu_config.yaml  wandb.json  wandb.json.template  wandb.md
docs/: IMG_AE_DX_ARCHITECTURE.md  README.md  TODO.md
docs/development/: DEVELOPMENT_TODO.md  PROGRESS_SUMMARY.md  PROJECT_COMPLETION.md
docs/guides/: EVALUATION_GUIDE.md  GOOGLE_COLAB_VI.md  PYTORCH_AMP_FIX.md  QUICK_START.md  T4_GPU_TRAINING_GUIDE.md  TRAINING_GUIDE.md
docs/research/: PROJECT_JOURNEY.md  REQUIREMENT.md
notebooks/: Anomaly_Detection_Research_Colab.ipynb  ImgAE_Dx_Enhanced_Training.ipynb  ImgAE_Dx_Enhanced_Training_Fixed.ipynb  ImgAE_Dx_HuggingFace_Training.ipynb  ImgAE_Dx_HuggingFace_Training_Fixed.ipynb  README.md  T4_GPU_Training_Colab.ipynb
outputs/: README.md
scripts/: jupyter.sh  setup.sh  setup_colab_t4.sh  test.sh  train.sh  train_colab_t4.sh  validate_project.py
scripts/tests/unit/: test_models.py
src/imgae_dx/: __init__.py
src/imgae_dx/cli/: __init__.py  config.py  evaluate.py  train.py
src/imgae_dx/data/: __init__.py  transforms.py
src/imgae_dx/models/: __init__.py  base.py  reversed_ae.py  unet.py
src/imgae_dx/streaming/: __init__.py  huggingface_client.py  kaggle_client.py  memory_manager.py
src/imgae_dx/training/: __init__.py  evaluator.py  metrics.py  streaming_trainer.py  trainer.py
src/imgae_dx/utils/: __init__.py  config_manager.py  config_manager_backup.py
src/imgae_dx/visualization/: enhanced_comparative_analysis.py  enhanced_error_heatmaps.py  enhanced_evaluation_code.py  enhanced_research_report.py  fixed_research_report.py  multi_image_heatmaps.py
tests/: __init__.py  conftest.py  test_huggingface_integration.py
tests/integration/: test_training.py
tests/unit/: test_config.py  test_models.py
